# MemBase

./: .gitignore  .gitmodules  README.md  memory_construction.py  memory_evaluation.py  memory_search.py  realmem.json
benchmarks/lightmem/: README.md  check_endpoints.sh  lightmem_config.json  pyproject.toml  run_all.sh  summarize_token_cost.py
benchmarks/mem0/: README.md  api_config.json  check_endpoints.sh  mem0_config.json  pyproject.toml  run_all.sh  summarize_token_cost.py
benchmarks/naive-rag/: README.md  api_config.json  check_endpoints.sh  naive_rag_config.json  pyproject.toml  run_all.sh  summarize_token_cost.py
benchmarks/simplemem/: README.md  api_config.json  check_endpoints.sh  pyproject.toml  run_all.sh  simplemem_config.json  summarize_token_cost.py
data/: Adeleke_Okonjo_dialogues_256k_first28_sessions.json
docs/: membase_testing_guide_zh.md
envs/: amem_requirements.txt  evermemos_requirements.txt  hipporag_requirements.txt  langmem_requirements.txt  lightmem_requirements.txt  long_context_requirements.txt  mem0_requirements.txt  memos_requirements.txt  rag_requirements.txt  simplemem_requirements.txt
examples/evaluate_amem_on_longmemeval/: README.md
examples/evaluate_lightmem_on_locomo/: README.md  lightmem_config.json  qa_prompt.py  run.sh  run_construction.sh  run_evaluation.sh  run_search.sh
examples/evaluate_mem0_on_locomo/: README.md  api_config.json  mem0_config.json  qa_prompt.py  run.sh  run_construction.sh  run_evaluation.sh  run_search.sh
examples/evaluate_memos_on_locomo/: README.md
examples/evaluate_naive_rag_on_locomo/: README.md  api_config.json  naive_rag_config.json  run.sh  run_construction.sh  run_evaluation.sh  run_search.sh
examples/evaluate_on_realmem/: api_config.json  mem0_config.json
mem0_output/: RealMem_online_evaluation.json
membase/: __init__.py
(+169 files in other folders)
